--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ notifications:
   on_start: always
 
 addons:
+  sonarcloud:
+    organization: "cxsonar_sonar-scanner-maven" # the key of the org you chose at step #3
+    token:
+      secure: 6671057b1d77eac3ca564d6ef60dcad280a223f7 # encrypted value of your token
+	script:
+	# other script steps might be done before running the actual analysis
+	- sonar-scanner
   apt:
     packages:
       # upgrade java 8 as the default version 1.8.0_31 prevents from compiling sources
