--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,20 @@ language: java
 sudo: false
 install: true
 
-jdk:
-  - oraclejdk8
-
 addons:
   sonarcloud:
-    organization: "cxsonar_sonar-scanner-maven" # the key of the org you chose at step #3
+    organization: "cxsonar_sonar-scanner-maven" 
     token:
-      secure: 6671057b1d77eac3ca564d6ef60dcad280a223f7 # encrypted value of your token
-  script:
-  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  apt:
-    packages:
-      # upgrade java 8 as the default version 1.8.0_31 prevents from compiling sources
-      # https://github.com/travis-ci/travis-ci/issues/4042
-      - oracle-java8-installer
+      secure: a3b6fcd14f2101ff759ee5f70c1bc0563f6f28de # encrypted value of your token
+
+sjdk:
+  - oraclejdk8
+
+script:
+  # JaCoCo is used to have code coverage, the agent has to be activated
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
